--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY='django-insecure-(-_e@=v9c7n7fkuxbyp-kiy10lognlxsrr%-8*dh=+fjnp&=b#'
-DEBUG=True
+DEBUG=False
 MODE='dev'
 DB_NAME='api'
 DB_USER='code_monkey'
