--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-crispy-forms==1.13.0
 django-heroku==0.3.1
 django-registration==3.1.2
 django-tinymce==3.4.0
+django-filter==22.1
 djangorestframework==3.12.4
 gunicorn==19.9.0
 idna==3.3
